modified skills component

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -5,6 +5,7 @@
     background:linear-gradient(125deg,white,#331C52,#291c3a) ;
     color: white;
     padding-block:30px ;
+    padding-top: 80px;
 }
 /* .homeHeader{
     margin-left: -15%;
