--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -5,7 +5,10 @@
 .top {
   background: linear-gradient(to right, #8121d0, #291c3a);
   color: white;
-  position: relative;
+  position: fixed; 
+  top: 0; 
+  width: 100%; 
+  z-index: 1000;
  
 }
 .container {
@@ -42,12 +45,17 @@
 .nav ul li a {
   color: white; 
   text-decoration: none; 
+  cursor: pointer;
 }
 
 .nav ul li:hover {
   text-decoration: underline;
 
 }
+.nav ul li a.active {
+  color: #fb9d19; /* Different color for the active link */
+}
+
 
 .btn button {
   padding-inline: 25px;
@@ -61,6 +69,14 @@
   color: black;
   text-decoration: none;
  
+}
+.btn button:hover{
+  background-color: black;
+
+}
+.btn button:hover a{
+  
+  color: white;
 }
 .closeIcon{
   display: none;
@@ -131,7 +147,7 @@
   
 }
 
-@media screen and (min-width: 577px) and (max-width: 768px) {
+@media screen and (min-width: 576px) and (max-width: 768px) {
   .nav ul {
     display: block;
   }
