--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -3,13 +3,26 @@
   padding-block: 20px;
   /* border: 2px solid red; */
 }
-
+.skillsLeftRight {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.skillsLeft{
+  width: 500px;
+  margin-top: 60px;
+}
+.skillsLeft img{
+  width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
 .techIcons {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 20px;
-  margin-left: 60%;
+
   max-width: 360px;
 }
 
@@ -23,47 +36,41 @@
   width: 100%;
 }
 .skillsH3 {
-  margin-left: 60%;
   font-size: 30px;
   margin-bottom: 30px;
 }
-@media screen and (max-width: 766px) {
-  .techIcons {
-    margin-left: 0;
-  }
-  .skillsH3 {
-    margin-left: 0;
-  }
-}
-/* @media screen and (min-width:397px) and (max-width:576px){
-    .techIcons{  
-        margin-left:0 ;
-    }
-    .skillsH3{
-        margin-left: 0;
-       
-    }
 
-    
+@media screen and (max-width: 576px) {
+
+  .skillsLeft{
+    display: none;
+  }
+  .skillsLeftRight{
+    justify-content: flex-start;
+  }
 
 }
 @media screen and (min-width:577px) and (max-width:768px){
-    .techIcons{   
-        margin-left:25% ;
- 
-    }
-    
-    .skillsH3{
-        margin-left: 25%;
-       
-    }
-  
-} */
-@media screen and (min-width: 769px) and (max-width: 1200px) {
-  .techIcons {
-    margin-left: 50%;
+  .skillsLeft{
+    display: none;
   }
-  .skillsH3 {
-    margin-left: 50%;
+  .skillsLeftRight{
+    justify-content: flex-end ;
   }
+
 }
+@media screen and (min-width:768px) and (max-width:900px){
+  .skillsLeft{
+    width: 300px;
+  }
+
+}
+@media screen and (min-width:900px) and (max-width:1200px){
+  .skillsLeft{
+    width: 400px;
+  }
+
+}
+
+
+
