--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -46,6 +46,7 @@
         display: flex;
         flex-direction: column;
         background:linear-gradient(155deg,white,#331C52,#291c3a) ;
+       
    
     }
    
@@ -66,8 +67,12 @@
     .profile{
         width: 200px;
         height: 200px;
+        margin-left: 0px;
        
       
+    }
+    .homeHeader{
+        margin-left: 30px;
     }
 
   
