--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -39,8 +39,26 @@
   font-size: 30px;
   margin-bottom: 30px;
 }
+@media screen and (max-width:396px){
+  .skillIcon {
+    border-radius: 10px;
+    background-color: #331c52;
+    padding: 10px;
+    flex-basis: calc(100px - 35px);
+  }
+  .skillIcon img{
+    width: 100%;
+  }
+  .skillsLeft{
+    display: none;
+  }
+  .skillsLeftRight{
+    justify-content: flex-start;
+  }
 
-@media screen and (max-width: 576px) {
+}
+
+@media screen and (min-width: 397px) and (max-width:576px) {
 
   .skillsLeft{
     display: none;
